XWMM Change log

4.1.5
- Don't freak out when XBMC returns no results
- Rewrite movie set management feature (Issue #88)
- Rearrange directory layout (Issue #85)

4.1.4
- Clean up TV and Movie section
- Add missing writer field for episodes
- Allow TV shows to be sorted with the ignore article option
- Remove extra favicon.ico
- Use the same field names as XBMC
- Add missing tag field for movies
- Sort movies by sort title
- Require Gotham (XBMC 13.x) as a minimum
- No default image is better than a squished one
- Fix artwork on music section

4.1.3
- Fix performance issues on Movies by Genre view (Issue #81)
- Rewrite the Genre Management feature (Issues #45, #61)

4.1.2
- Add sort options to export to html

4.1.1
- Improve error reporting for JSON-RPC requests
- Fix 2 minor JSON-RPC errors [362bf51, 41a48a3]

4.1.0
- Clean up jshint warnings (Issue #73)
- Remove unused code (Issue #68)
- Major clean up of the TV section
- Major clean up of the Movie section
- Restore view movies by genre
- Upgrade to ExtJS v3.4.1.1
- Use light gray theme
- Add media flags from the Confluence theme (Issue #26)
- Start sharing common code (XWMM.util)
- Rewrite the HTML export feature (Issue #62)

4.0.2
- XBMC expects rating to be a number not a string. (Issue #57)
- Fix the mark (un)watched in the TV section. (Issue #58)
- Fix typo in README.md - XWMM not X V MM (Issue #74)
- Remove the very broken files section (Issue #65)
- Remove the very broken actor section (Issue #66)
- Fix genre column not populated on movie view. (Issue #42)
- Add missing console functions to Internet Explorer. (Issue #70)
- Add debug code for API request failures. (Issue #71)

4.0.1
- Fix by criticalfiction
-- Allow UI to immediately reflect changes to sets after save
-- Fix mark as watched

4.0.0 - Gotham version open.

3.0.1
- Changes by fyfe
- Whitspace fixes
- Multicharactar support
- Fix typo in updateXBMCTables commit.
- Cleanup and improve updateXBMCSet, updateXBMCGenreMovie, GetMovieGenres.        