@@ -336,8 +336,8 @@ var tvShowGrid = new Ext.grid.GridPanel({
 
     cm: new Ext.grid.ColumnModel([
         { header: 'Title', dataIndex: 'title', id: 'title' },
-        { header: '&#160;', dataIndex: 'playcount', width: 30, tooltip: 'Watched',
-          renderer: checkWatched }
+        { header: '<img src="../resources/images/icons/checked.png" width="16" height="16" alt="Watched">',
+          dataIndex: 'playcount', width: 30, tooltip: 'Watched', renderer: checkWatched }
     ]),
     autoExpandColumn: 'title',
     enableColumnResize: false,
